--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -18,7 +18,7 @@
         <div class="font-semibold leading-6 text-gray-800 group-hover:text-green-500 md:leading-normal text-md">
           Que tipos de evento você curte?
         </div>
-        <div class="mt-1 text-xs font-light leading-tight text-gray-600">Para receber sugestões personalizadas, indique
+        <div class="mt-1 text-sm  leading-tight text-gray-600">Para receber sugestões personalizadas, indique
           os
           eventos que você curte ou não.
         </div>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div data-target="swipable.endMessage" class="flex flex-col items-center justify-center hidden p-5 mx-5 my-5 my-auto space-y-5 text-center text-gray-800 transition-all duration-500 bg-white border rounded-lg shadow-md opacity-0 h-content">
-      <div id="end-message-title" class="font-light text-gray-700"></div>
+      <div id="end-message-title" class=" text-gray-700"></div>
       <div data-action="click->swipable#loadSuggestions click->cable-ready#perform"
            data-controller="cable-ready"
            data-cable-ready-perform="hero"
