--- a/web/app/components/hero/tabs_component.html.erb
+++ b/web/app/components/hero/tabs_component.html.erb
@@ -13,7 +13,7 @@
                                              'text-green-600': @selected_tab == 'suggestions'} %>">
           Indicados para você
         </div>
-        <div class="<%= helpers.class_names 'text-xs -mt-1',
+        <div class="<%= helpers.class_names 'text-sm -mt-1',
                                             {'text-gray-600':  @selected_tab != 'suggestions',
                                              'text-green-600': @selected_tab == 'suggestions'} %>">
           Com base no que você gostou
@@ -27,7 +27,7 @@
                                              'text-green-600': @selected_tab == 'places'} %>">
           Locais e organizadores
         </div>
-        <div class="<%= helpers.class_names 'text-xs -mt-1',
+        <div class="<%= helpers.class_names 'text-sm -mt-1',
                                             {'text-gray-600':  @selected_tab != 'places',
                                              'text-green-600': @selected_tab == 'places'} %>">
           Que você segue
