--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -14,7 +14,7 @@
       <div class="inline-block mt-1 text-base font-medium text-gray-800">
         <%= @event.details_name %>
       </div>
-      <span class="inline-block mt-1 text-xs font-light leading-snug text-gray-600">
+      <span class="inline-block mt-1 text-sm  leading-snug text-gray-600">
 				<%= helpers.limit_description_size @event.details_description %>
 			</span>
       <div class="flex justify-center mt-2 -mb-6 space-x-2">
