--- a/web/app/components/user_chip_small_component.html.erb
+++ b/web/app/components/user_chip_small_component.html.erb
@@ -50,7 +50,7 @@
 		<% end %>
 
 		<% if @friend&.liked_events&.size > 0 %>
-		<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-10 text-xs font-bold text-green-500 bg-white rounded-full">
+		<span class="absolute right-0 inline-flex items-center justify-center w-4 h-4 mr-2 -mt-10 text-sm font-bold text-green-500 bg-white rounded-full">
 			<%= @friend&.liked_events&.size %>
 		</span>
 		<% end %>
