--- a/web/app/views/feeds/_horizontal_event.html.erb
+++ b/web/app/views/feeds/_horizontal_event.html.erb
@@ -1,12 +1,12 @@
 <div id="<%= dom_id event %>" class="flex justify-between p-5 border-b border-gray-50">
 	<div class="pr-2">
-		<div class="mb-1 text-xs font-light text-gray-600">
+		<div class="mb-1 text-sm  text-gray-600">
 			<%= format_hour event.first_day_time %>h · <%= event.categories_primary_name.titleize %>
 		</div>
 		<div class="mb-1 leading-snug text-gray-700">
 			<%= link_to event.details_name, event_path(event), class: 'md:hover:underline' %>
 		</div>
-		<div class="text-xs font-light text-gray-500">
+		<div class="text-sm  text-gray-500">
 			<%= link_to limit_place_name_size(event.place_details_name, 24), place_path(event.place), class: 'md:hover:underline' %>
 		</div>
 		<div class="flex my-1 -ml-2">
