--- a/web/app/components/friendship_request_component.html.erb
+++ b/web/app/components/friendship_request_component.html.erb
@@ -12,7 +12,7 @@
 			<% if @user.friendship_request_received? @friend %>
 				<%= reflex_tag :reply,
 											 :div,
-											 class: 'p-1 rounded text-gray-300 text-xs',
+											 class: 'p-1 rounded text-gray-300 text-sm',
 											 data:  {
 													 'friendship-action': 'refuse'
 											 } do %>
@@ -20,18 +20,18 @@
 				<% end %>
 				<%= reflex_tag :reply,
 											 :div,
-											 class: 'bg-green-50 text-green-600 text-xs p-1 font-medium rounded',
+											 class: 'bg-green-50 text-green-600 text-sm p-1 font-medium rounded',
 											 data:  {
 													 'friendship-action': 'accept'
 											 } do %>
 					Aceitar
 				<% end %>
 			<% elsif @user.friendship_accepted? @friend %>
-				<div class="p-1 rounded text-green-500 text-xs">
+				<div class="p-1 rounded text-green-500 text-sm">
 					Aceito
 				</div>
 			<% else %>
-				<div class="p-1 text-red-500 text-xs">
+				<div class="p-1 text-red-500 text-sm">
 					Recusado
 				</div>
 			<% end %>
