--- a/web/app/components/large_event_component.html.erb
+++ b/web/app/components/large_event_component.html.erb
@@ -13,7 +13,7 @@
 					 data-share-button-text="<%= helpers.strip_tags(helpers.limit_description_size(@event.details_description, 160)) %>"
 					 data-share-button-title="<%= @event.details_name %>"
 					 data-share-button-url="<%= event_url(@event, format: :html) %>">
-				<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-xs text-gray-700 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
+				<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm text-gray-700 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
 						 data-action="click->share-button#share"
 						 data-controller="ripple">
 					<span>Compartilhar</span>
@@ -64,7 +64,7 @@
 				</div>
 				<div class="text-sm"><%= helpers.format_hour @event.first_day_time %></div>
 			</div>
-			<div class="my-auto text-xs leading-snug text-gray-800">
+			<div class="my-auto text-sm leading-snug text-gray-800">
 				O evento acontecerá
 				<span class="font-semibold">daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %></span>
 				em uma
@@ -73,7 +73,7 @@
 		</div>
 		<div class="px-5 py-5 border-b border-gray-100">
 			<h2 class="font-bold text-gray-700 uppercase"><%= helpers.limit_place_name_size(@event.place_details_name, 40) %></h2>
-			<div class="mt-2 text-xs font-light leading-tight text-gray-700">
+			<div class="mt-2 text-sm  leading-tight text-gray-700">
 				<%= helpers.limit_address_name_size @event.geographic['address'] %>
 			</div>
 			<div>
@@ -92,7 +92,7 @@
 		</div>
 		<div class="px-5 py-5">
 			<h2 class="font-bold text-gray-700 uppercase">Sobre o evento</h2>
-			<div class="mt-2 text-sm font-light leading-relaxed text-gray-700 break-words text-with-html">
+			<div class="mt-2 text-sm  leading-relaxed text-gray-700 break-words text-with-html">
 				<%= @event.details_description.html_safe %>
 			</div>
 		</div>
