--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -13,7 +13,7 @@
           <img src="<%= @event.image[:original].try { |image| image.url(public: true) } %>" alt="<%= @event.details_name %>" class="absolute top-0 left-0 object-cover object-center w-full h-full min-w-full bg-gray-50">
         </div>
         <div class="">
-          <div class="flex items-center w-full px-3 py-2 space-x-2 text-xs font-medium text-gray-400 bg-gray-100 cursor-pointer">
+          <div class="flex items-center w-full px-3 py-2 space-x-2 text-sm font-medium text-gray-400 bg-gray-100 cursor-pointer">
             <a href="<%= @event.details_source_url %>" target="_blank" class="flex items-center justify-center flex-1 py-2 space-x-2 bg-white rounded shadow-sm">
               <div>Abrir no facebook</div>
               <svg class="h-4 text-gray-300 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
             </div>
             <div class="text-sm"><%= helpers.format_hour @event.first_day_time %></div>
           </div>
-          <div class="my-auto text-xs leading-snug text-gray-800">
+          <div class="my-auto text-sm leading-snug text-gray-800">
             O evento acontecerá
             <span class="font-semibold">daqui <%= helpers.distance_of_time_in_words @event.day_of_week['date'], DateTime.now %></span>
             em uma
@@ -79,7 +79,7 @@
         </div>
         <div class="px-5 py-5 border-b border-gray-100">
           <h2 class="font-bold text-gray-700 uppercase"><%= helpers.limit_place_name_size(@event.place_details_name, 40) %></h2>
-          <div class="mt-2 text-xs font-light leading-tight text-gray-700">
+          <div class="mt-2 text-sm  leading-tight text-gray-700">
             <%= helpers.limit_address_name_size @event.geographic['address'] %>
           </div>
           <div>
@@ -96,7 +96,7 @@
         </div>
         <div class="px-5 py-5">
           <h2 class="font-bold text-gray-700 uppercase">Sobre o evento</h2>
-          <div class="mt-2 text-sm font-light leading-relaxed text-gray-700 break-words text-with-html">
+          <div class="mt-2 text-sm  leading-relaxed text-gray-700 break-words text-with-html">
             <%= @event.details_description.html_safe %>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <% Event.includes(:place).not_ml_data.active.not_disliked(@user).where(id: @event.similar_data).order_by_ids(@event.similar_data).not_liked(@user).limit(6).each do |similar_event| %>
             <div class="flex justify-between px-5 py-2 border-b md:border-0 border-gray-50">
               <div class="pr-6">
-                <div class="mb-1 text-xs font-light text-gray-600">
+                <div class="mb-1 text-sm  text-gray-600">
                   <%= I18n.l(similar_event.start_time, format: :long) %>
                   às <%= helpers.format_hour similar_event.first_day_time %>h
                   · <%= similar_event.categories_primary_name.titleize %>
@@ -120,7 +120,7 @@
                                 class: 'md:hover:underline mb-1 leading-snug text-gray-700' do %>
                   <%= similar_event.details_name %>
                 <% end %>
-                <div class="text-xs font-light text-gray-500">
+                <div class="text-sm  text-gray-500">
                   <%= link_to helpers.limit_place_name_size(similar_event.place_details_name, 24), place_path(similar_event.place), class: 'md:hover:underline' %>
                 </div>
               </div>
