--- a/web/app/views/components/collection/events/_collection.html.erb
+++ b/web/app/views/components/collection/events/_collection.html.erb
@@ -63,7 +63,7 @@
 				<%= title[:principal] %>
 			</h2>
 			<% if continue_to && user %>
-				<div class="inline-flex items-center pr-3 text-xs text-gray-800 group-hover:text-green-500 md:pr-0"
+				<div class="inline-flex items-center pr-3 text-sm text-gray-800 group-hover:text-green-500 md:pr-0"
 						 data-action="click->section#seeMoreInNewPage">
 					<svg class="w-5 h-auto ml-1 fill-current md:hidden md:ml-2 md:w-10" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"/>
