--- a/web/app/views/events/_large_event.html.erb
+++ b/web/app/views/events/_large_event.html.erb
@@ -6,10 +6,10 @@
 
 	<%# unless mobile_device? %>
 <!--		<div class="space-x-1">-->
-			<%#= link_to "Porto Alegre", city_events_url, class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-xs' %>
-			<%#= link_to event.categories_primary_name.try(:capitalize), category_events_url(event.categories_primary_name), class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-xs' %>
-			<%#= link_to I18n.l(event.day_of_week['date'], format: :long), day_events_url(event.day_of_week['date'].strftime('%d-%m-%Y')), class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-xs' %>
-			<%#= link_to limit_place_name_size(event.place_details_name, 30), place_path(event.place), class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-xs' %>
+			<%#= link_to "Porto Alegre", city_events_url, class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-sm' %>
+			<%#= link_to event.categories_primary_name.try(:capitalize), category_events_url(event.categories_primary_name), class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-sm' %>
+			<%#= link_to I18n.l(event.day_of_week['date'], format: :long), day_events_url(event.day_of_week['date'].strftime('%d-%m-%Y')), class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-sm' %>
+			<%#= link_to limit_place_name_size(event.place_details_name, 30), place_path(event.place), class: 'border hover:bg-gray-50 hover:border-gray-100 inline-block px-2 py-1 rounded-full text-gray-600 text-sm' %>
 <!--		</div>-->
 	<%# end %>
 
@@ -21,7 +21,7 @@
 				 data-share-button-text="<%= strip_tags(limit_description_size(event.details_description, 160)) %>"
 				 data-share-button-title="<%= event.details_name %>"
 				 data-share-button-url="<%= event_url(event, format: :html) %>">
-			<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-xs text-gray-700 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
+			<div class="relative flex px-3 py-2 mx-auto overflow-hidden text-sm text-gray-700 bg-gray-50 rounded-full shadow cursor-pointer ripple ripple-black hover:bg-white hover:text-green-500 w-content"
 					 data-action="click->share-button#share"
 					 data-controller="ripple">
 				<span>Compartilhar</span>
@@ -72,7 +72,7 @@
 			</div>
 			<div class="text-sm"><%= format_hour event.first_day_time %></div>
 		</div>
-		<div class="my-auto text-xs leading-snug text-gray-800">
+		<div class="my-auto text-sm leading-snug text-gray-800">
 			O evento acontecerá
 			<span class="font-semibold">daqui <%= distance_of_time_in_words event.day_of_week['date'], DateTime.now %></span>
 			em uma <span class="font-semibold"><%= I18n.l(event.day_of_week['date'], format: :week) %></span>. <%= link_to('Ver minha agenda neste dia', my_agenda_path(start_date: event.day_of_week['date']), class: 'text-green-500 font-semibold') %>
@@ -80,7 +80,7 @@
 	</div>
 	<div class="px-5 py-5 border-b border-gray-100">
 		<h2 class="font-bold text-gray-700 uppercase"><%= limit_place_name_size(event.place_details_name, 40) %></h2>
-		<div class="mt-2 text-xs font-light leading-tight text-gray-700">
+		<div class="mt-2 text-sm  leading-tight text-gray-700">
 			<%= limit_address_name_size event.geographic['address'] %>
 		</div>
 		<div>
@@ -99,7 +99,7 @@
 	</div>
 	<div class="px-5 py-5">
 		<h2 class="font-bold text-gray-700 uppercase">Sobre o evento</h2>
-		<div class="mt-2 text-sm font-light leading-relaxed text-gray-700 break-words text-with-html">
+		<div class="mt-2 text-sm  leading-relaxed text-gray-700 break-words text-with-html">
 			<%= event.details_description.html_safe %>
 		</div>
 	</div>
