--- a/web/app/views/friendships/_friendship_request.html.erb
+++ b/web/app/views/friendships/_friendship_request.html.erb
@@ -10,7 +10,7 @@
 	</div>
 	<div class="flex space-x-1">
 		<% if user.friendship_request_received? friend %>
-			<div class="p-1 rounded text-gray-300 text-xs"
+			<div class="p-1 rounded text-gray-300 text-sm"
 					 data-reflex="click->Friendship#friendship"
 					 data-reflex-root="#page"
 					 data-friend-id="<%= user.id %>"
@@ -18,7 +18,7 @@
 					 data-friendship-action="refuse">
 				Recusar
 			</div>
-			<div class="bg-green-50 text-green-600 text-xs p-1 font-medium rounded"
+			<div class="bg-green-50 text-green-600 text-sm p-1 font-medium rounded"
 					 data-reflex="click->Friendship#friendship"
 					 data-reflex-root="#page"
 					 data-friend-id="<%= user.id %>"
@@ -27,11 +27,11 @@
 				Aceitar
 			</div>
 		<% elsif user.friendship_accepted? friend %>
-			<div class="p-1 rounded text-green-400 text-xs">
+			<div class="p-1 rounded text-green-400 text-sm">
 				Aceito
 			</div>
 		<% else %>
-			<div class="p-1 text-red-400 text-xs">
+			<div class="p-1 text-red-400 text-sm">
 				Recusado
 			</div>
 		<% end %>
