Refactor in swipable component to show end message in viewcomponents way

--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= component_controller data: {'hero--train-event-id': @event.id} do %>
-  <div class="relative flex flex-col w-64 bg-white rounded-lg shadow h-content tap-highlight-none md:w-48 md:border md:border-gray-200"
+  <div class="relative flex flex-col w-64 bg-white rounded-lg shadow h-content tap-highlight-none md:border md:border-gray-200"
        id="<%= dom_id @event, :train %>">
     <div class="relative overflow-hidden">
       <div class="bg-white rounded-t-lg aspect-ratio-16/9"></div>
